Add red and green to customizer

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -61,13 +61,13 @@
   --primary-500: hsl(217deg 91% 60%); // #3c83f6
   --primary-600: hsl(226deg 71% 40%); // #1e3fae
 
-  --green-400: hsl(101, 53%, 70%);
-  --green-500: hsl(102, 45%, 53%);
-  --green-600: hsl(102, 50%, 45%);
+  --green-400: #a4db8a;
+  --green-500: #72bd51;
+  --green-600: #5cac39;
 
-  --red-400: hsl(0deg 90% 75%);
-  --red-500: hsl(0deg 84% 65%);
-  --red-600: hsl(0deg 70% 55%);
+  --red-400: #f98686;
+  --red-500: #f15b5b;
+  --red-600: #dd3c3c;
 
   // === BACKGROUNDS ===========================================================
 
