--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -147,7 +147,7 @@
 
       &.ajax-in-progress {
         pointer-events: none;
-        filter: blur(1px);
+        filter: var(--ajax-in-progress-filter, blur(1px));
       }
 
       button {
