--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -112,6 +112,12 @@ td.comment {
   border-top: 2px solid #dcdcde;
 }
 
+.customize-control-description small {
+  display: block;
+  line-height: 1.3;
+  margin-bottom: 6px;
+}
+
 // =============================================================================
 // FICTIONEER METABOXES
 // =============================================================================
